--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,16 @@ authors = ["Mathis Joffre <mariusjoffre@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
 typer = "^0.9.0"
+openai-whisper = "^20230314"
+moviepy = "^1.0.3"
+torch = { version = "1.13.1", source="torch"}
 
+[[tool.poetry.source]]
+name = "torch"
+url = "https://download.pytorch.org/whl/cpu"
+secondary = true
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
